objects/Opp_Registration_Approval_Assignment__mdt/Opp_Registration_Approval_Assignment__mdt.object-meta.xml
<CustomObject>
    <label>Opp Registration Approval Assignment</label>
    <pluralLabel>Opp Registration Approval Assignments</pluralLabel>
</CustomObject>