objects/Opp_Registration_Approval_Assignment__mdt/fields/Approval_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assignment__c</fullName>
    <label>Approval Assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>