objects/Opp_Registration_Approval_Assignment__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>HQ Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>