objects/Opp_Registration_Approval_Assignment__mdt/fields/Countries_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Countries_Exceptions__c</fullName>
    <label>HQ Country Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>