objects/Opp_Registration_Approval_Assignment__mdt/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <label>Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>