objects/Opp_Registration_Approval_Assignment__mdt/fields/Level_3__c.field-meta.xml
<CustomField>
    <fullName>Level_3__c</fullName>
    <label>Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>