objects/Opp_Registration_Approval_Assignment__mdt/fields/Level_3_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Exceptions__c</fullName>
    <label>Level 3 Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>