objects/Opp_Registration_Approval_Assignment__mdt/fields/Level_4__c.field-meta.xml
<CustomField>
    <fullName>Level_4__c</fullName>
    <label>Level 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>