objects/Opp_Registration_Approval_Assignment__mdt/fields/Partner_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_ID__c</fullName>
    <label>Partner Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>