objects/Opp_Registration_Approval_Assignment__mdt/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>